--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ subtitle: github.io
 description: >- # this means to ignore newlines until "baseurl:"
   devlopr-jekyll is a beautiful Jekyll Theme Built For Developers, which is optimized for speed and readability.
 
-url: "https://dowonna.github.io/#/" # the base hostname & protocol for your site, e.g. https://example.github.io
-baseurl: "/blog" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. https://example.github.io
+baseurl: "" # the subpath of your site, e.g. /blog
 
 urls:
     - text: Home
