--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ urls:
 
 # Edit Author details (For multi authors check _data/authors.yml)
 
-author_logo: profile.png
+author_logo: ![KakaoTalk_20201224_162914855](https://user-images.githubusercontent.com/17983434/103659347-a4f01280-4faf-11eb-863b-7e5d9f518161.jpg)
 author: Kamil Lee
 author_bio: Dowonna is FREE!!
 author_email: "parousia0918@gmail.com"
